# trade-remedies-api

./: .all-contributorsrc  .coveragerc  .gitignore  .pii-secret-exclude  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Makefile  Procfile  README.md  bootstrap.sh  coverage.json  docker-compose-bdd.yml  docker-compose-test.yml  docker-compose.yml  example.env  fixtures.sh  local.env.example  manifest.yml  ner_out.txt  package-lock.json  package.json  pii-ner-exclude.txt  pii-secret-exclude.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start.sh  test.env  update_fixtures.sh
.circleci/: config.yml
.copilot/: config.yml  image_build_run.sh
.pii-secret-hook/file_content/: pii-secret-log
.pii-secret-hook/ner/: pii-secret-log
adr/: README.md  adr-001-use-adrs.md  adr-002-major-tr-refactor.md  adr-003-use-token-auth.md  adr-004-use-django-restql.md  template.md
audit/: admin.py
audit/migrations/: 0001_initial.py  0006_auto_20181213_1614.py
cases/fixtures/: case_types.json
cases/migrations/: 0001_initial.py  0002_auto_20181015_1444.py  0005_auto_20181108_1750.py  0006_auto_20181109_1151.py  0008_auto_20181113_1131.py  0016_case_initiated_sequence.py  0017_auto_20181211_1632.py  0018_submission_time_window.py  0022_add_submission_type_time_window_key.py  0030_submissiontype_order.py  0031_auto_20190322_1010.py  0033_casetype_order.py  0044_auto_20191206_1016.py  0046_notice.py
cases/models/: archive.py  submissiondocument.py  submissionstatus.py  timegate.py
cases/services/: urls.py
cases/tests/: test_team.py
config/: celery.py
contacts/services/: api.py
content/: admin.py  models.py
content/tests/: test_content.py
core/: notifier.py  user_context.py
core/fixtures/: feedback_forms.json
core/migrations/: 0003_twofactorauth_last_user_agent.py  0011_auto_20190220_1623.py  0021_userprofile_last_modified.py
core/services/: auth.py  base.py
core/system/: README.md
cypress/test_fixtures/: users.json
docs/adr/: adr-001-use-adrs.md  adr-004-use-django-restql.md  adr-005-use-amazon-ses.md
docs/architecture_diagrams/: architecture.drawio  c3.drawio
documents/migrations/: 0001_initial.py  0003_auto_20190409_0826.py
documents/parsers/: __init__.py  pptx.py
documents/services/: api.py
fitness/: fitness_metrics.db
invitations/: models.py
invitations/migrations/: 0003_invitation_submission.py
notes/migrations/: 0003_note_data.py
organisations/: models.py
organisations/migrations/: 0002_organisation_duplicate_of.py
organisations/services/: api.py
requirements/: base.txt  dev.txt  prod.txt
requirements.in/: base.in  dev.in  prod.in
scripts/: entry.sh
security/: admin.py
security/fixtures/: roles.json
security/services/: urls.py
setup/: init.sql
tasks/: models.py
tasks/migrations/: 0005_auto_20200318_1335.py
trade_remedies_api/: .flake8  fixtures.sh  manage.py  pyproject.toml  pytest.ini
trade_remedies_api/api_test/: apps.py  serializers.py  tests.py  urls.py  views.py
trade_remedies_api/audit/: __init__.py  admin.py  dirtyfields.py  mixins.py  models.py  tasks.py  utils.py
trade_remedies_api/auth/: app.py
trade_remedies_api/authentication/: __init__.py  admin.py  app.py  apps.py  serializers.py  urls.py  views.py
trade_remedies_api/cases/: admin.py  apps.py  constants.py  exceptions.py  outcomes.py  receivers.py  serializers.py  tasks.py
trade_remedies_api/config/: .coveragerc  backends.py  celery.py  cf_env.py  context.py  encoders.py  env.py  exceptions.py  feature_flags.py  feature_flags_source.py  gunicorn.py  middleware.py  ratelimit.py  renderers.py  routers.py  serializer_fields.py  serializers.py  test_bases.py  urls.py  viewsets.py  wsgi.py
trade_remedies_api/contacts/: admin.py  models.py  views.py
trade_remedies_api/content/: models.py
trade_remedies_api/core/: admin.py  apps.py  base.py  constants.py  decorators.py  elastic.py  exceptions.py  feature_flags.py  feedback.py  healthcheck.py  models.py  notifier.py  (+8 more)
workflow/: outcomes.py
(+552 files in other folders)
