[tool.poetry]
name = "Trade Remedies API"
version = "1.0.0"
description = "Trade Remedies API"
authors = ["Chris Pettinga <chris.pettinga@digital.trade.gov.uk>"]

[build-system]
requires = ["poetry-core^1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
Markdown = "3.1.1"
PyPDF2 = "1.27.9"
boto3 = "1.17.88"
celery = "5.2.2"
certifi = "^2024.7.4"
colour = "0.1.5"
dj-database-url = "0.5.0"
django-audit-log-middleware = "0.0.4"
django-axes = "6.1.1"
django-countries = "7.2.1"
django-dirtyfields = "*"
django-environ = "0.4.5"
django-extensions = "3.2.3"
django-flags = "~=5.0.11"
django-log-formatter-ecs = "0.0.5"
django-phonenumber-field = "6.0.0"
django-redis = "5.2.0"
django-restql = "0.15.2"
django-storages = "1.14.2"
django-timezone-field = "4.2.3"
django = "~=4.2.20"
django_pglocks = "1.0.3"
djangorestframework = "~=3.15.2"
dpath = "2.1.6"
feed-gov-back = "0.4"
freezegun = "1.2.2"
"geckoboard.py" = "1.0.0"
gevent = "23.9.1"
django-db-geventpool = "4.0.1"
graphviz = "0.8.3"
lxml = "4.9.1"
minio = "4.0.11"
model-bakery = "1.9.0"
notifications-python-client = "6.3.0"
odfpy = "1.4.1"
openpyxl = "3.1.2"
opensearch-py = "2.5.0"
phonenumbers = "8.12.38"
prompt-toolkit = "^3.0.30"
psycopg2-binary = "2.9.1"
python-docx = "1.1.2"
python-pptx = "1.0.2"
pytz = "*"
redis = "4.4.4"
requests = "2.32.2"
requests_toolbelt = "0.9.1"
sentry-sdk = "2.8.0"
sqlparse = "0.5.0"
striprtf = "0.0.26"
titlecase = "0.12.0"
urllib3 = "1.26.19"
werkzeug = "3.0.6"
whitenoise = "5.3.0"
xlrd = "2.0.1"
django-ratelimit = "4.0.0"
tldextract = "3.4.4"
pillow = "^10.3.0"
gunicorn = "23.0.0"
trade-remedies-client = {git = "https://github.com/uktrade/trade-remedies-client.git", rev = "master"}
v2-api-client = {git = "https://github.com/uktrade/trs_v2_api_client.git", rev = "master"}

[tool.poetry.dev-dependencies]
black = "24.3.0"
codecov = "2.1.13"
coverage = "*"
django-debug-toolbar = "*"
flake8 = "*"
ipython = "^8.10"
matplotlib = "*"
pip-tools = "^6.5.0"
pygments = "2.15.0"
pyproject-flake8 = "5.0.4.post1"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-mock = "*"
pytest-pythonpath = "*"
pytest-xdist = "*"
traitlets = ">=5"
wheel = ">=0.38.1"
fitness-functions = {git = "https://github.com/uktrade/fitness-functions", rev = "master"}

[tool.black]
line-length = 100
#diff = true
#check = true
target-versions = ['py39']
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | _build
  | .venv
  | tests-reports
  | tests
  | migrations
)/
'''

# see https://pycqa.github.io/isort/docs/configuration/black_compatibility/
[tool.isort]
profile = "black"
line_length = 100
include_trailing_comma = true
multi_line_output = 3

[tool.flake8]
max-line-length = 100
per-file-ignores = '__init__.py: F401'
ignore = '''
/(
    C901
    | D100
    | D104
    | D106
    | D200
    | D203
    | D205
    | D400
    | D401
    | W503
    | W504
    | E704
    | E231
    | F841
    | F401
    | F405
    | F811
    | E722
    | E203
    | E501
    | W605
'''
max-complexity = 10
application-import-names = '''
/(
    audit
    | cases
    | contacts
    | content
    | core
    | documents
    | features
    | invitations
    | notes
    | organisations
    | reports
    | security
    | tasks
    | config
    | workflow
)/
'''
import_order_style = 'smarkets'
extend-exclude = '''
/(
  */migrations/*.py
)/
'''

[tool.pytest.ini_options]
addopts = '''
    -p no:warnings
    --cov=.
    --no-cov-on-fail
    --cov-config=.coveragerc
    --cov-branch
    --ignore=staticfiles
    -n 4
    -m "not version2"
'''
python_classes='Test*'

python_files = ["test_*.py", "tests.py"]

markers = [
    "version2: marks tests that require API_V2_ENABLED env var set",
    "functional: marks tests that exercise multiple units, e.g. login journey"
    ]

DJANGO_SETTINGS_MODULE = "trade_remedies_api.config.settings.test"
pythonpaths = ". trade_remedies_api"
